[tool.pdm]

[project]
name = "pyhsmm"
version = "0.1.6"
description = "Bayesian inference in HSMMs and HMMs"
keywords = ["bayesian", "inference", "mcmc", "time-series", "monte-carlo", "variational inference", "mean field", "vb"]
readme = "README.md"
authors = [
    {name = "Matthew James Johnson", email = "mattjj@csail.mit.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python",
]
dependencies = [
    "future>=1.0.0",
    "matplotlib",
    "nose",
    "numpy<2.0.0",
    "pybasicbayes @ git+https://github.com/athp18/pybasicbayes.git",
    "scipy",
    "six",
    "requests>=2.32.3",
]
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"

[project.urls]
Homepage = "https://github.com/mattjj/pyhsmm"

[tool.pdm.build]
run-setuptools = true
is-purelib = false

[build-system]
requires = ["pdm-backend", "Cython", "numpy<2.0.0", "requests"]
build-backend = "pdm.backend"
